--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  display: inline-block;
+ 
+ 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+img{
+width: 280px;
+height: 140px;
+margin: 2px;
+}
+button{
+  margin-left: 6px;
+  margin-top: 1px;
+  background-color: darkblue;
+  border: none;
+  padding: 4px;
   color: white;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.App{
+  background-color: gray;
+  padding: 12px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
+@media screen and (min-width:764px) {
+  img{
+    width: 400px;
+    height: 300px;
+    margin: 2px;
+    }
+}
+  
